Fix configure check for SASL
The option --with-sasl defaults to 'check', but an inverted test logic
lets the SASL check fail with an error instead of disabling SASL.
Fix the test logic so SASL support gets disabled if SASL is missing and
--with-sasl is set to check.

--- a/configure.in
+++ b/configure.in
@@ -613,7 +613,7 @@ if test "x$with_sasl" != "xno"; then
   CFLAGS="$CFLAGS $SASL_CFLAGS"
   LIBS="$LIBS $SASL_LIBS"
   AC_CHECK_HEADER([sasl/sasl.h],[],[
-    if test "x$with_sasl" != "xcheck" ; then
+    if test "x$with_sasl" = "xcheck" ; then
         with_sasl=no
     else
         fail=1
