The secret driver is stateful, link it directly to libvirtd
All other stateful drivers are linked directly to libvirtd
instead of libvirt.so. Link the secret driver to libvirtd too.

* daemon/Makefile.am: link the secret driver to libvirtd
* daemon/libvirtd.c: add #ifdef WITH_SECRETS blocks
* src/Makefile.am: don't link the secret driver to libvirt.so
* src/libvirt_private.syms: remove the secretRegister symbol

--- a/daemon/Makefile.am
+++ b/daemon/Makefile.am
@@ -110,6 +110,10 @@ endif
 if WITH_NODE_DEVICES
     libvirtd_LDADD += ../src/libvirt_driver_nodedev.la
 endif
+
+if WITH_SECRETS
+    libvirtd_LDADD += ../src/libvirt_driver_secret.la
+endif
 endif
 
 libvirtd_LDADD += ../src/libvirt.la
