--- a/docs/news.html.in
+++ b/docs/news.html.in
@@ -8,6 +8,174 @@
     <p>Here is the list of official releases, however since it is early on in the
 development of libvirt, it is preferable when possible to just use the <a href="downloads.html">GIT version or snapshot</a>, contact the mailing list
 and check the <a href="ChangeLog.html">ChangeLog</a> to gauge progress.</p>
+    <h3>0.7.5: Dec 23 2009</h3>
+    <ul>
+      <li>Features:
+      Add new API virDomainMemoryStats to header and drivers (Adam Litke),
+      Public API and domain extension for CPU flags (Jiri Denemark),
+      expose SR IOV physical/virtual function relationships (Dave Allan),
+      Support for JSON mode monitor [deactivated] (Daniel P. Berrange),
+      Support for interface model='netfront' (Jiri Denemark),
+      vbox: Add support for version 3.1 (Pritesh Kothari),
+      Support QEMU's virtual FAT block device driver (Daniel P. Berrange)
+      </li>
+
+      <li>Documentation:
+      Document the dommemstat command in the virsh man page (Adam Litke),
+      esx: Add more links to external documentation (Matthias Bolte),
+      esx: Extend documentation about 'vcenter' and add some about 'auto_answer' (Matthias Bolte),
+      Fix and improve domain xml video element description (Matthias Bolte),
+      Fix owner and group in example volume XML (Matthew Booth),
+      add missing doc for device <shareable/> option (Daniel Veillard),
+      add AppArmor test and examples to dist (Jamie Strandboge),
+      Update location of C# bindings. (Richard Jones),
+      Fix typo in QEMU driver webpage (Daniel P. Berrange),
+      Clarify documentation for private symbols (Wolfgang Mauerer),
+      Fix news.html validation (Dan Kenigsberg)
+      </li>
+
+      <li>Portability:
+      Define ATTRIBUTE_SENTINEL for GCC &lt; 4.0 too (Matthias Bolte),
+      Fix compilation  with configure --disable-nls (Matthias Bolte),
+      Fix configure check for SASL (Matthias Bolte),
+      Fix GnuTLS pkg-config check (Matthias Bolte),
+      Report an error if no XDR library can be found (Matthias Bolte),
+      Fix compilation with gcrypt &lt; 1.4.2 (Matthias Bolte),
+      Don't mix LDFLAGS and LIBS in the configure script (Diego Elio Pettenò),
+      Don't make it possible to define HAVE_HAL but not enable it in automake (Diego Elio Pettenò),
+      Fix install location for Python bindings (Matthias Bolte),
+      Use AM_PATH_PYTHON and python-config to detect Python configuration (Matthias Bolte),
+      Fix a compilation failure if yajl not avail (Daniel Veillard),
+      Fix compilation for configure --disable-nls (Matthias Bolte)
+      </li>
+
+      <li>Bug fixes:
+      cpu: Fix memory leaks in x86FeatureLoad and x86ModelLoad (Matthias Bolte),
+      Make Xen VT-d PCI attach/detach work (Chris Lalancette),
+      Fix detection of JSON when restarting libvirtd (Daniel P. Berrange),
+      Fix reporting of TLS connection errors (Daniel P. Berrange),
+      Fix typo in qemudDomainAttachHostPciDevice() (Daniel Veillard),
+      esx: Destroy virtual machine on a vCenter if available (Matthias Bolte),
+      esx: Undefine virtual machine on a vCenter if available (Matthias Bolte),
+      Initialize gcrypt threading (Daniel P. Berrange),
+      Fix bug in storage driver accessing wrong private data (Daniel P. Berrange),
+      esx_vi.c: do not call through NULL function pointer (Jim Meyering),
+      esx_util.c: avoid NULL deref for invalid inputs (Jim Meyering),
+      esx: Don't goto failure for invalid arguments in VMX code (Matthias Bolte),
+      Fix memory leak in qemudBuildCommandLine (Matthias Bolte),
+      avoid malfunction when virFileResolveLink is applied to non-POSIX FS (Jim Meyering),
+      libvirt.c: don't let a NULL "cpumaps" argument provoke a NULL-deref (Jim Meyering),
+      qemu migration: avoid NULL-deref given an invalid input (Jim Meyering),
+      qemu_driver.c: don't unlink(NULL) on OOM error path (Jim Meyering),
+      remote_driver.c: also zero out ->saslDecodedOffset member (Jim Meyering),
+      qemu_driver.c: avoid double free on error path (Jim Meyering),
+      libvirtd: avoid a NULL dereference on error path (Jim Meyering),
+      virsh: avoid double-free (Jim Meyering),
+      node_device_driver.c: don't write beyond EOB for 4K-byte symlink (Jim Meyering),
+      Eliminate failure to delete empty storage pools (Laine Stump),
+      Fix use of virEventAddHandleImpl() (Jiri Denemark),
+      Fix possible NULL pointer dereference (Paolo Bonzini),
+      fix various breakages in qemu Dump command (Paolo Bonzini),
+      Fix reference leak in remoteDispatchStorageVolCreateXmlFrom (Matthias Bolte),
+      Fix memory leak in virStorageBackendCopyToFD (Matthias Bolte),
+      retrieve paused/running state at migration start (Paolo Bonzini),
+      fix migration of paused vms upon failure (Paolo Bonzini),
+      qemu driver: Fix segfault in libvirt/libvirtd when uri->path is NULL. (Richard Jones),
+      Fix a wellformedness problem in secret.rng (Diego Elio Pettenò),
+      Fix virDomainObj ref handling in QEMU driver (Daniel P. Berrange),
+      Pull code to start CPUs executing out of qemudInitCpuAffinity() (Daniel P. Berrange),
+      Fix migration cancellation for QEMU (Daniel P. Berrange),
+      Fix crash when deleting monitor while a command is in progress (Daniel P. Berrange),
+      udev_device_get_devpath might return NULL (Guido Günther),
+      Fix some locking issues (Matthias Bolte),
+      Fix event test timer checks on kernels with HZ=100 (Daniel P. Berrange),
+      Fix threading problems in python bindings (Daniel P. Berrange),
+      Supress annoying libcap-ng errors from valgrind (Daniel P. Berrange),
+      Fix two leaks in test driver (Daniel P. Berrange),
+      Free cgroup device ACL list on driver shutdown (Daniel P. Berrange),
+      xen: Fix unconditional freeing in xenDaemonListDefinedDomains() (Matthias Bolte),
+      Fix default disk type when parsing QEMU argv (Daniel P. Berrange),
+      remove port filter when network device is detached (Gerhard Stenzel)
+      </li>
+
+      <li>Improvements:
+      convert missing server entry points into unsupported errors (Daniel Veillard),
+      fix some error report when on remote access (Olivier Fourdan),
+      Disable JSON mode monitor until QEMU is more mature (Daniel P. Berrange),
+      Only probe for CPU models if required (Jiri Denemark),
+      Add cpu_map.xml to libvirt.spec (Jiri Denemark),
+      Install cpu_map.xml (Jiri Denemark),
+      esx: Don't warn about '/' paths (Matthias Bolte),
+      esx: Extend vCenter query parameter (Matthias Bolte),
+      esx: Improve domain lookup by UUID (Matthias Bolte),
+      build: update gnulib submodule to latest (Jim Meyering),
+      Relax the allowed values for machine type in schema (Daniel Veillard),
+      Implement --pool option for virsh vol-path (Dave Allan),
+      nodedev: Add removable storage 'media_label' prop (Cole Robinson),
+      add --live support to "virsh dump" (Paolo Bonzini),
+      add --crash support to "virsh dump" (Paolo Bonzini),
+      Get QEMU pty paths from the monitor (Matthew Booth),
+      Extract the assigned pty device for QEmu channels (Matthew Booth),
+      Make QEMU driver use -chardev everywhere if available (Matthew Booth),
+      add virsh --suspend arg to migrate command (Paolo Bonzini),
+      reload iptables rules on libvirtd restart (Mark McLoughlin),
+      reload iptables rules simply by re-adding them (Mark McLoughlin),
+      Plumb domain description tag in xend backend (Jim Fehlig),
+      Make QEMU text monitor parsing more robust (Daniel P. Berrange),
+      Hook up JSON monitor to emit basic lifecycle events (Daniel P. Berrange),
+      Add QEMU monitor callbacks for basic lifecycle events (Daniel P. Berrange),
+      Switch over to passing a callback table to QEMU monitor (Daniel P. Berrange),
+      Introduce callbacks for serializing domain object private data to XML (Daniel P. Berrange),
+      Switch LXC driver to use a private data blob for virDomainObj state (Daniel P. Berrange),
+      Switch UML driver to use a private data blob for virDomainObj state (Daniel P. Berrange),
+      Add a 'format' arg to qemuMonitorChangeMedia() since JSON will support it (Daniel P. Berrange),
+      Introduce a simple API for handling JSON data (Daniel P. Berrange),
+      Add --system flag to autogen.sh to make it easy to build with right prefix (Daniel P. Berrange),
+      Export all symbols from xml.h for internal use (Jiri Denemark),
+      vbox: Use virIndexToDiskName() in vboxGenerateMediumName() (Matthias Bolte),
+      Tests for interface type/model configuration (Jiri Denemark),
+      Add virIndexToDiskName and fix mapping gap (Matthias Bolte),
+      Add another SENTINEL attribute (Paolo Bonzini),
+      Fix help message (Wolfgang Mauerer),
+      Alternate CPU affinity impl to cope with NR_CPUS > 1024 (Daniel P. Berrange)
+      </li>
+
+      <li>Cleanups:
+      The secret driver is stateful, link it directly to libvirtd (Matthias Bolte),
+      Remove undefined symbols from libvirt_private.syms (Matthias Bolte),
+      boolean shadows a typedef in rpcndr.h when compiled with MinGW (Matthias Bolte),
+      Rename DATADIR to PKGDATADIR to fix win32 build (Jiri Denemark),
+      Move cpu_map.xml to -client RPM (Jiri Denemark),
+      Fix undefined reference to 'close_used_without_including_unistd_h' (Matthias Bolte),
+      Fix argument type of virProcessInfoSetAffinity dummy function (Matthias Bolte),
+      esx: Use occurrence enum to specify expected result of a SOAP call (Matthias Bolte),
+      esx: Fix occurence typo (Matthias Bolte),
+      esx: Removed unused inttypes.h include (Matthias Bolte),
+      esx: Replace libxml1 'xmlChildrenNode' with libxml2 'children' (Matthias Bolte),
+      esx: Use more suitable error code in esxVI_LookupVirtualMachineByUuid() (Matthias Bolte),
+      esx: Add automatic question handling (Matthias Bolte),
+      avoid calling exit with a constant; use EXIT_* instead (Jim Meyering),
+      maint: remove from VC two gnulib-provided files (Jim Meyering),
+      xm_internal.c: remove misleading dead code (Jim Meyering),
+      Cleanup temporary #define after use (Matthew Booth),
+      Suppress cgroup error message on sucess startup (Ryota Ozaki),
+      Small change of RNG syntax for domain (Diego Elio Pettenò),
+      remove iptablesReloadRules() and related code (Mark McLoughlin),
+      remove all traces of lokkit support (Mark McLoughlin),
+      Add virBufferFreeAndReset() and replace free() (Matthias Bolte),
+      Fix the news file non-ascii characters (Daniel Veillard),
+      Add missing commas to the 0.7.4 news section (Matthias Bolte),
+      Change generated HTML to UTF-8 encoding (Daniel Veillard),
+      Avoid an type-punned pointer aliasing pbm (Daniel Veillard),
+      Move qemuMonitorEscape + migrate status enum into shared monitor code (Daniel P. Berrange),
+      vbox: Update IIDs from version 3.1-beta2 to 3.1-final (Matthias Bolte),
+      Fix ReprotError vs ReportError typo in JSON code (Daniel P. Berrange),
+      Fix inverted conditional test in configure.ac check for yajl (Daniel P. Berrange),
+      Pull schedular affinity code out into a separate module (Daniel P. Berrange),
+      Ignore docs/ directory for strcmp() syntax check (Daniel P. Berrange)
+      </li>
+
+    </ul>
     <h3>0.7.4: Nov 20 2009</h3>
     <ul>
       <li>Features:
