--- a/docs/hacking.html.in
+++ b/docs/hacking.html.in
@@ -19,13 +19,13 @@
           or:
         </p>
         <pre>
-  cvs diff -up > libvirt-myfeature.patch
+  git diff > libvirt-myfeature.patch
 </pre></li>
       <li>Split large changes into a series of smaller patches, self-contained
         if possible, with an explanation of each patch and an explanation of how
         the sequence of patches fits together.</li>
-      <li>Make sure your patches apply against libvirt CVS.  Developers
-        only follow CVS and don't care much about released versions.</li>
+      <li>Make sure your patches apply against libvirt GIT.  Developers
+        only follow GIT and don't care much about released versions.</li>
       <li><p>Run the automated tests on your code before submitting any changes.
           In particular, configure with compile warnings set to -Werror:</p>
         <pre>
