--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -876,9 +876,9 @@ virt_aa_helper_LDFLAGS = $(WARN_CFLAGS)
 virt_aa_helper_LDADD =						\
 		$(WARN_CFLAGS)					\
 		$(LIBXML_LIBS)					\
-		@top_srcdir@/gnulib/lib/libgnu.la		\
 		@top_srcdir@/src/libvirt_conf.la		\
-		@top_srcdir@/src/libvirt_util.la
+		@top_srcdir@/src/libvirt_util.la		\
+		@top_srcdir@/gnulib/lib/libgnu.la
 virt_aa_helper_CFLAGS =						\
 		-I@top_srcdir@/src/conf				\
 		-I@top_srcdir@/src/security
