esx: Add stubs for secondary driver types
This stops libvirt from probing for a libvirtd on the ESX server and
sets the base for the implementation of the secondary drivers.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -213,7 +213,13 @@ ONE_DRIVER_SOURCES =						\
 		./opennebula/one_client.h
 
 ESX_DRIVER_SOURCES =						\
+		esx/esx_private.h						\
 		esx/esx_driver.c esx/esx_driver.h		\
+		esx/esx_interface_driver.c esx/esx_interface_driver.h		\
+		esx/esx_network_driver.c esx/esx_network_driver.h		\
+		esx/esx_storage_driver.c esx/esx_storage_driver.h		\
+		esx/esx_device_monitor.c esx/esx_device_monitor.h		\
+		esx/esx_secret_driver.c esx/esx_secret_driver.h		\
 		esx/esx_util.c esx/esx_util.h			\
 		esx/esx_vi.c esx/esx_vi.h			\
 		esx/esx_vi_methods.c esx/esx_vi_methods.h	\
